fixed bug z-index

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -9,7 +9,7 @@ body{
     width: 100%;
     position: fixed;
     top: 0;
-    z-index: 10;
+    z-index: 1000;
 }
 
 .logo-text{
